Share UI minor fixes: My Sites dashlet toolbar layout issue. Header menu items now have bigger clickable area. Creating a site will automatically add it to your favourites for easier rediscovery.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@23086 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 7834626294062f374282845b29cdba99964c7d44

--- a/root/projects/slingshot/source/web/css/base.css
+++ b/root/projects/slingshot/source/web/css/base.css
@@ -89,6 +89,29 @@ hr
    min-height: 1.8em;
 }
 
+/* Enables a link to be vertically-aligned to a YUI button */
+.yui-button-align
+{
+   border-color: transparent;
+   border-style: solid;
+   border-width: 1px 0;
+   display: inline-block;
+   vertical-align: text-bottom;
+}
+.yui-button-align .first-child
+{
+   border-color: transparent;
+   border-style: solid;
+   border-width: 0 1px;
+}
+.yui-button-align button,
+.yui-button-align a
+{
+   font-size: 93%;
+   line-height: 2;
+   min-height: 2em;
+}
+
 .yui-t1
 {
    width: auto;
